--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "github-preview",
-  "description": "Github preview theme for Inkdrop Markdown Editor",
-  "version": "1.5.0",
+  "name": "nord-preview",
+  "description": "Nord preview theme for Inkdrop Markdown Editor",
+  "version": "0.0.0",
   "theme": "preview",
   "repository": "https://github.com/inkdropapp/inkdrop-github-preview-theme",
   "license": "MIT",
+  "author": "choco14t<chocoh14t@gmail.com>",
   "styleSheets": [
     "github-markdown.less",
-    "github-markdown-dark.less"
+    "nord.less"
   ],
   "engines": {
     "inkdrop": "^4.x"
