--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "theme": "preview",
   "repository": "https://github.com/choco14t/inkdrop-nord-preview-theme",
   "scripts": {
-    "build": "lessc styles/less/github-markdown.less ./styles/github-markdown.css && lessc styles/less/github-markdown-dark.less ./styles/github-markdown-dark.css"
+    "build": "lessc styles/less/github-markdown.less ./styles/github-markdown.css && lessc styles/less/nord.less ./styles/nord.css"
   },
   "license": "MIT",
   "author": "choco14t<chocoh14t@gmail.com>",
   "styleSheets": [
-    "github-markdown.less",
-    "nord.less"
-    "metadata-section.css"
-    "gfm-alerts.css",
+    "github-markdown.css",
+    "nord.css",
+    "metadata-section.css",
+    "gfm-alerts.css"
   ],
   "engines": {
     "inkdrop": "^5.x"
