--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gfm-alerts.css"
   ],
   "engines": {
-    "inkdrop": "^5.8.X"
+    "inkdrop": "5.8.x"
   },
   "devDependencies": {
     "less": "^3.11.3"
